--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Influencer</title>
+   <!-- google font  -->
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;
+   700&display=swap" rel="stylesheet">
+   <!-- icon  -->
+   <script src="https://kit.fontawesome.com/d269ed824e.js" crossorigin="anonymous"></script>
+   <!-- css project file  -->
+   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-   
+
+<main>
+
+   <!-- start section one  -->
+   <!-- start section one  -->
+   <!-- start section one  -->
+   <section class="section-one" id="home">
+      <div class="navbar">
+        
+         <nav class="link-header">
+            <div>
+            <label for="click" class="menu"><i class="fas fa-bars"></i></label>
+            <div class="logo"><a href="#home">Influencer Products</a></div>
+            <i class="fas fa-cart-arrow-down"></i>
+            </div>
+            <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">Products</a></li>
+               <li><a href="#">Sign up</a></li>
+               <li><a href="#">Log in</a></li>
+               <li><a href="#"><i class="fas fa-search"></i></a></li>
+               <li><a href="#"><i class="fas fa-cart-arrow-down"></i></a></li>
+            </ul>
+         </nav>
+      </div>
+      <!-- end header navbar tag  -->
+      <!-- end header navbar tag  -->
+      <!-- end header navbar tag  -->
+
+   </section>
+
+</main>
+
 </body>
 </html>
