--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
    <script src="https://kit.fontawesome.com/d269ed824e.js" crossorigin="anonymous"></script>
    <!-- css project file  -->
    <link rel="stylesheet" href="index.css">
+   <!-- favicon  -->
+   <link rel="icon" href="favicon.JPG">
 </head>
 
 <body>
