--- a/index.html
+++ b/index.html
@@ -42,11 +42,20 @@
             </ul>
          </nav>
       </div>
+   </section>
       <!-- end header navbar tag  -->
       <!-- end header navbar tag  -->
       <!-- end header navbar tag  -->
 
-   </section>
+<section class="home" id="home">
+   
+   
+
+</section>
+
+      
+
+   
 
 </main>
 
