--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
    
 </section>
 
+<header>
+   <hr width="80%" >
+   <ul>
+      <li><img src="logos/logo-1.svg" class="btn" alt=""></li>
+      <li><img src="logos/logo-2.svg" class="btn" alt=""></li>
+      <li><img src="logos/logo-3.svg" class="btn" alt=""></li>
+      <li><img src="logos/logo-4.svg" class="btn" alt=""></li>
+      <li><img src="logos/logo-5.svg" class="btn" alt=""></li>
+      <li><img src="logos/logo-6.svg" class="btn" alt=""></li>
+      <li><img src="logos/logo-7.svg" class="btn" alt=""></li>
+   </ul>
+   <hr width="80%" >
+</header>
       
 
    
