--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
    
 </section>
 
+<!-- brand logo header -->
+<!-- brand logo header -->
+<!-- brand logo header -->
+
 <header>
    <hr width="80%" >
    <ul>
@@ -86,8 +90,163 @@
    </ul>
    <hr width="80%" >
 </header>
-      
 
+<!-- start second section     -->
+<!-- start second section     -->
+<!-- start second section     -->
+
+<section class="second-section">
+
+ <h2 class="header-h2">Popular Collection</h2>
+  
+  <div class="products">
+
+     <div class="one-product">
+        <img src="images/tripod.png" alt="">
+        <h2>Flex Tripod</h2>
+        <p>$50.48</p>
+        <div>
+         <i class="fas fa-star filled"></i>
+         <i class="fas fa-star filled"></i>
+         <i class="fas fa-star filled"></i>
+         <i class="fas fa-star filled"></i>
+         <i class="fas fa-star-half-alt"></i>
+         <span>4.5</span>
+      </div> 
+       <p>Wordwide shifting available
+         Buyers protection possible!</p>        
+     </div>
+
+     <div class="one-product">
+      <img src="images/mic.png" alt="">
+      <h2>Microphone</h2>
+      <p>$120.25</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="far fa-star"></i>
+       <span>4</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/airpod.png" alt="">
+      <h2>Airbuds</h2>
+      <p>$100.00</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star-half-alt"></i>
+       <span>4.5</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/drone.png" alt="">
+      <h2>Drone</h2>
+      <p>$980.25</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star"></i>
+       <span>4</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/lights.png" alt="">
+      <h2>Light Setup</h2>
+      <p>$1200.00</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star-half-alt"></i>
+       <span>4.5</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/setup.png" alt="">
+      <h2>Photoshoot set</h2>
+      <p>$820.40</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star-half-alt"></i>
+       <span>4.5</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/camera.png" alt="">
+      <h2>Vlogging Camera</h2>
+      <p>$1800.80</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star-half-alt"></i>
+       <span>4.5</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/single-light.png" alt="">
+      <h2>Green Screen</h2>
+      <p>$25.48</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star"></i>
+       <span>5</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+   <div class="one-product">
+      <img src="images/action.png" alt="">
+      <h2>Action Camera</h2>
+      <p>$380.00</p>
+      <div>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <i class="fas fa-star filled"></i>
+       <span>5</span>
+    </div> 
+     <p>Wordwide shifting available
+       Buyers protection possible!</p>        
+   </div>
+
+  </div>
+</section>
    
 
 </main>
