--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <ul>
                <li><a href="#home">Home</a></li>
-               <li><a href="#">Products</a></li>
+               <li><a href="#products">Products</a></li>
                <li><a href="#">Sign up</a></li>
                <li><a href="#">Log in</a></li>
                <li><a href="#"><i class="fas fa-search"></i></a></li>
@@ -95,7 +95,7 @@
 <!-- start second section     -->
 <!-- start second section     -->
 
-<section class="second-section">
+<section class="second-section" id="products">
 
  <h2 class="header-h2">Popular Collection</h2>
   
