--- a/index.html
+++ b/index.html
@@ -244,8 +244,16 @@
      <p>Wordwide shifting available
        Buyers protection possible!</p>        
    </div>
-
+   
   </div>
+  <p class="see-more btn">See More <i class="see-more fas fa-arrow-right"></i></p>
+</section>
+
+<!-- third section start -->
+<!-- third section start -->
+<!-- third section start -->
+<section class="third-section">
+
 </section>
    
 
