--- a/index.html
+++ b/index.html
@@ -246,14 +246,28 @@
    </div>
    
   </div>
-  <p class="see-more btn">See More <i class="see-more fas fa-arrow-right"></i></p>
+  <p class="see-more see">See More <i class="see-more fas fa-arrow-right"></i></p>
 </section>
 
 <!-- third section start -->
 <!-- third section start -->
 <!-- third section start -->
-<section class="third-section">
+<section>
+   <div class="third-section>
+   <div class="third-image">
+      <img src="images/gear.png" alt="">
+   </div>
 
+   <div class="third-text">
+    <h2>Featured products at one place</h2>
+    <p>Our purpose is to Make Waves; an idea seeded in the fact that our creators tell stories that build human connections, which set off waves of influence. These waves of influence become our data layers.
+
+   </p>
+   <button class="button-btn"><a href="#"> Join Now 
+      <i class="fas fa-arrow-right"></i></a></button> 
+
+   </div>
+</div>
 </section>
    
 
