--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <!-- third section start -->
 <!-- third section start -->
 <section>
-   <div class="third-section>
+   <div class="third-section">
    <div class="third-image">
       <img src="images/gear.png" alt="">
    </div>
