--- a/index.html
+++ b/index.html
@@ -269,9 +269,25 @@
    </div>
 </div>
 </section>
-   
 
 </main>
+<!-- footer section start  -->
+<!-- footer section start  -->
+<!-- footer section start  -->
+<section class="footer">
+   <h2>Influencer products</h2>
+   <p class="footer-p1">Copyright &copy 2020  influencer products</p>
+   <p class="footer-p2">All rights reserved</p>
+   <div class="finish-icons">
+    
+     <i class="fab fa-facebook"></i>
+     <i class="fab fa-behance"></i>
+     <i class="fab fa-dribbble"></i>
+     <i class="fab fa-twitter"></i>
+
+   </div>
+</section>
+
 
 </body>
 </html>
