--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         
          <nav class="link-header">
             <div>
-            <label for="click" class="menu"><i class="fas fa-bars"></i></label>
+               <input type="checkbox" id="nav-icon">
+            <label for="nav-icon" class="menu"><i class="fas fa-bars"></i></label>
             <div class="logo"><a href="#home">Influencer Products</a></div>
             <i class="fas fa-cart-arrow-down"></i>
             </div>
-            <ul>
+            <ul class="navigation-icon">
                <li><a href="#home">Home</a></li>
                <li><a href="#products">Products</a></li>
                <li><a href="#">Sign up</a></li>
